fix(platform): clean up post-#286 follow-ups (#287)
Co-authored-by: Emilio <emilio@local>